--- a/stylesheets/syntax.css
+++ b/stylesheets/syntax.css
@@ -1,7 +1,7 @@
 .highlight .hll { background-color: #49483e !important }
 .highlight  { background: #272822 !important; color: #f8f8f2  !important}
 .highlight pre { background: transparent !important; color: #f8f8f2  !important}
-.highlight .c { color: #75715e  !important} /* Comment */
+.highlight .c { color: #75715e  !important; font-weight: bold !important} /* Comment */
 .highlight .err { color: #960050 !important; background-color: #1e0010  !important} /* Error */
 .highlight .k  { color: #F14D4F !important} /* Keyword */
 .highlight .l  { color: #ae81ff !important} /* Literal */
@@ -10,7 +10,7 @@
 .highlight .p  { color: #f8f8f2 !important} /* Punctuation */
 .highlight .cm { color: cyan !important}    /* Comment.Multiline */
 .highlight .cp { color: #F660AB !important} /* Comment.Preproc */
-.highlight .c1 { color: cyan    !important} /* Comment.Single */
+.highlight .c1 { color: cyan    !important; font-weight: bold !important} /* Comment.Single */
 .highlight .cs { color: #75715e !important} /* Comment.Special */
 .highlight .ge { font-style: italic  !important} /* Generic.Emph */
 .highlight .gs { font-weight: bold  !important} /* Generic.Strong */
@@ -22,7 +22,7 @@
 .highlight .kt { color: #FFB774 !important} /* Keyword.Type */
 .highlight .ld { color: #e6db74 !important} /* Literal.Date */
 .highlight .m  { color: #ae81ff !important} /* Literal.Number */
-.highlight .s  { color: #e6db74 !important} /* Literal.String */
+.highlight .s  { color: #7ECF53 !important} /* Literal.String */
 .highlight .na { color: #a6e22e !important} /* Name.Attribute */
 .highlight .nb { color: #f8f8f2 !important} /* Name.Builtin */
 .highlight .nc { color: #a6e22e !important} /* Name.Class */
@@ -47,7 +47,7 @@
 .highlight .sc { color: #e6db74 !important} /* Literal.String.Char */
 .highlight .sd { color: #e6db74 !important} /* Literal.String.Doc */
 .highlight .s2 { color: #e6db74 !important} /* Literal.String.Double */
-.highlight .se { color: #ae81ff !important} /* Literal.String.Escape */
+.highlight .se { color: #AEFF83 !important} /* Literal.String.Escape */
 .highlight .sh { color: #e6db74 !important} /* Literal.String.Heredoc */
 .highlight .si { color: #e6db74 !important} /* Literal.String.Interpol */
 .highlight .sx { color: #e6db74 !important} /* Literal.String.Other */
