--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -68,89 +68,6 @@
   -webkit-font-smoothing: antialiased;
 }
 
-/* normalize.css 2012-02-07T12:37 UTC - http://github.com/necolas/normalize.css */
-/* =============================================================================
-   HTML5 display definitions
-   ========================================================================== */
-/*
- * Corrects block display not defined in IE6/7/8/9 & FF3
- */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section,
-summary {
-  display: block;
-}
-
-/*
- * Corrects inline-block display not defined in IE6/7/8/9 & FF3
- */
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-
-/*
- * Prevents modern browsers from displaying 'audio' without controls
- */
-audio:not([controls]) {
-  display: none;
-}
-
-/*
- * Addresses styling for 'hidden' attribute not present in IE7/8/9, FF3, S4
- * Known issue: no IE6 support
- */
-[hidden] {
-  display: none;
-}
-
-/* =============================================================================
-   Base
-   ========================================================================== */
-/*
- * 1. Corrects text resizing oddly in IE6/7 when body font-size is set using em units
- *    http://clagnut.com/blog/348/#c790
- * 2. Prevents iOS text size adjust after orientation change, without disabling user zoom
- *    www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/
- */
-html {
-  font-size: 100%;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/*
- * Addresses font-family inconsistency between 'textarea' and other form elements.
- */
-html,
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
-}
-
-/*
- * Addresses margins handled incorrectly in IE6/7
- */
-body {
-  margin: 0;
-}
-
 /* =============================================================================
    Links
    ========================================================================== */
@@ -173,46 +90,6 @@ a:active {
 /* =============================================================================
    Typography
    ========================================================================== */
-/*
- * Addresses font sizes and margins set differently in IE6/7
- * Addresses font sizes within 'section' and 'article' in FF4+, Chrome, S5
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-h2 {
-  font-size: 1.5em;
-  margin: 0.83em 0;
-}
-
-h3 {
-  font-size: 1.17em;
-  margin: 1em 0;
-}
-
-h4 {
-  font-size: 1em;
-  margin: 1.33em 0;
-}
-
-h5 {
-  font-size: 0.83em;
-  margin: 1.67em 0;
-}
-
-h6 {
-  font-size: 0.75em;
-  margin: 2.33em 0;
-}
-
-/*
- * Addresses styling not present in IE7/8/9, S5, Chrome
- */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
 
 /*
  * Addresses style set to 'bolder' in FF3+, S4/5, Chrome
@@ -224,58 +101,6 @@ strong {
 
 blockquote {
   margin: 1em 40px;
-}
-
-/*
- * Addresses styling not present in S5, Chrome
- */
-dfn {
-  font-style: italic;
-}
-
-/*
- * Addresses styling not present in IE6/7/8/9
- */
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-/*
- * Addresses margins set differently in IE6/7
- */
-p,
-pre {
-  margin: 1em 0;
-}
-
-/*
- * Corrects font family set oddly in IE6, S4/5, Chrome
- * en.wikipedia.org/wiki/User:Davidgothberg/Test59
- */
-pre,
-code,
-kbd,
-samp {
-  font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
-  font-size: 1em;
-}
-
-/*
- * 1. Addresses CSS quotes not supported in IE6/7
- * 2. Addresses quote property not supported in S4
- */
-/* 1 */
-q {
-  quotes: none;
-}
-
-/* 2 */
-q:before,
-q:after {
-  content: '';
-  content: none;
 }
 
 small {
@@ -319,69 +144,6 @@ dd {
   margin: 0 0 0 40px;
 }
 
-/*
- * Addresses paddings set differently in IE6/7
- */
-menu,
-ol,
-ul {
-  padding: 0 0 0 40px;
-}
-
-/*
- * Corrects list images handled incorrectly in IE7
- */
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
-}
-
-li .heading {
-  color: #C17DF1;
-}
-
-/* =============================================================================
-   Embedded content
-   ========================================================================== */
-/*
- * 1. Removes border when inside 'a' element in IE6/7/8/9, FF3
- * 2. Improves image quality when scaled in IE7
- *    code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
- */
-img {
-  border: 0;
-  /* 1 */
-  -ms-interpolation-mode: bicubic;
-  /* 2 */
-}
-
-/*
- * Corrects overflow displayed oddly in IE9
- */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* =============================================================================
-   Figures
-   ========================================================================== */
-/*
- * Addresses margin not present in IE6/7/8/9, S5, O11
- */
-figure {
-  margin: 0;
-}
-
-/* =============================================================================
-   Forms
-   ========================================================================== */
-/*
- * Corrects margin displayed oddly in IE6/7
- */
-form {
-  margin: 0;
-}
 
 /*
  * Define consistent border, margin, and padding
@@ -392,48 +154,6 @@ fieldset {
   padding: 0.35em 0.625em 0.75em;
 }
 
-/*
- * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
- * 3. Corrects alignment displayed oddly in IE6/7
- */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  white-space: normal;
-  /* 2 */
-  *margin-left: -7px;
-  /* 3 */
-}
-
-/*
- * 1. Corrects font size not being inherited in all browsers
- * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome
- * 3. Improves appearance and consistency in all browsers
- */
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-  vertical-align: baseline;
-  /* 3 */
-  *vertical-align: middle;
-  /* 3 */
-}
-
-/*
- * Addresses FF3/4 setting line-height on 'input' using !important in the UA stylesheet
- */
-button,
-input {
-  line-height: normal;
-  /* 1 */
-}
 
 /*
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
@@ -461,23 +181,6 @@ input[disabled] {
   cursor: default;
 }
 
-/*
- * 1. Addresses box sizing set to content-box in IE8/9
- * 2. Removes excess padding in IE8/9
- * 3. Removes excess padding in IE7
-      Known issue: excess padding remains in IE6
- */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-  *height: 13px;
-  /* 3 */
-  *width: 13px;
-  /* 3 */
-}
 
 /*
  * 1. Addresses appearance set to searchfield in S5, Chrome
@@ -591,6 +294,7 @@ a {
   font-weight: 400;
   text-decoration: none;
 }
+
 a:hover {
   color: #FFB774;
 }
@@ -744,11 +448,11 @@ dt {
   padding: 2px 20px;
 }
 
-#header .title a{
+#header .title a {
   color: #858585;
 }
 
-#header .title a:hover{
+#header .title a:hover {
   color: #606060;
 }
 
@@ -797,8 +501,9 @@ dt {
   display: inline-block;
   text-align: center;
 }
+
 #header nav li a:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, ), color-stop(100%, ));
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #D12D2F), color-stop(100%, #B10D0F));
   background: -webkit-linear-gradient(#D12D2F, #B10D0F);
   background: -moz-linear-gradient(#D12D2F, #B10D0F);
   background: -o-linear-gradient(#D12D2F, #B10D0F);
@@ -811,15 +516,18 @@ dt {
   -o-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
 }
+
 #header nav li.fork {
   float: left;
   margin-left: 0px;
   margin-right: 15px
 }
+
 #header nav li.downloads {
   float: right;
   margin-left: 6px;
 }
+
 #header nav li.title {
   float: right;
   margin-right: 10px;
@@ -832,12 +540,14 @@ section {
   margin: 20px 0;
   margin-top: 70px;
 }
+
 section #title {
   border: 0;
   outline: none;
   margin: 0 0 0 0;
   padding: 0 0 5px 0;
 }
+
 section #title h1 {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
@@ -845,25 +555,13 @@ section #title h1 {
   text-align: center;
   line-height: 26px;
 }
+
 section #title p {
   color: #d7cfbe;
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 14px;
   text-align: center;
-}
-section #title .credits {
-  font-size: 11px;
-  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  color: #696969;
-  margin-top: -10px;
-}
-section #title .credits.left {
-  float: left;
-}
-section #title .credits.right {
-  float: right;
 }
 
 .post-tags, .post-tags a {
@@ -919,4 +617,3 @@ footer .credits.right {
     display: none;
   }
 }
-
