--- a/_includes/html-header.html
+++ b/_includes/html-header.html
@@ -3,6 +3,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <title>{{ site.top-title}} - {{ page.title }}</title>
   <meta name="author" content="Matt Renaud"/>
+  <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"/>
+  <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="/stylesheets/styles.css"/>
   <link rel="stylesheet" href="/stylesheets/pygment_trac.css"/>
   <link rel="stylesheet" href="/stylesheets/syntax.css"/>
