--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -238,7 +238,7 @@ table {
 body {
   padding: 0px 0 20px 0px;
   margin: 0px;
-  font: 18px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 18px/1.5 "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #f0e7d5;
   font-weight: normal;
   background: #252525;
@@ -254,7 +254,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #e8e8e8;
   margin: 0 0 10px;
-  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
 
@@ -262,32 +262,38 @@ p, ul, ol, table, pre, dl {
   margin: 0 0 20px;
 }
 
+.accent {
+  font-family: 'Oswald';
+}
+
 h1, h2, h3 {
+  font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.1;
 }
 
 h1 {
-  font-family: 'OpenSansBold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  font-size: 34px;
+  font-size: 32px;
   line-height: 50px;
 }
 
 h2 {
-  font-size: 28px;
+  font-size: 24px;
+}
 
+h3 {
+  font-size: 20px;
+  line-height: 24px;
+  font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: normal;
+  color: #b6b6b6;
 }
 
 h4, h5, h6 {
   color: #e8e8e8;
+  font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 
-h3 {
-  font-size: 18px;
-  line-height: 24px;
-  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  font-weight: normal;
-  color: #b6b6b6;
-}
+
 
 a {
   color: #DF8744;
@@ -311,7 +317,7 @@ ul {
 }
 
 strong {
-  font-family: 'OpenSansBold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-weight: normal;
 }
 
@@ -401,8 +407,8 @@ th {
   padding: 5px 10px;
   border-bottom: 1px solid #434343;
   color: #b6b6b6;
-  font-family: 'OpenSansSemibold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  font-weight: normal;
+  font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: bold;
 }
 
 td {
@@ -421,8 +427,8 @@ hr {
 
 dt {
   color: #F0E7D5;
-  font-family: 'OpenSansSemibold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  font-weight: normal;
+  font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: 400;
 }
 
 #header {
@@ -465,7 +471,7 @@ dt {
 }
 
 #header nav li {
-  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   list-style: none;
   display: inline;
@@ -549,18 +555,19 @@ section #title {
 }
 
 section #title h1 {
-  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  font-size: 34px;
+  font-size: 42px;
   text-align: center;
-  line-height: 26px;
+  line-height: 28px;
+  padding-bottom: 5px;
 }
 
 section #title p {
   color: #d7cfbe;
-  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -573,6 +580,13 @@ section #title p {
 .post-tags a:hover {
   color: #757575;
 }
+
+li .heading {
+  font-family: 'Oswald';
+  font-size: 20px;
+  color: #C17DF1;
+}
+
 
 footer .credits {
   font-size: 11px;
