Updated style for code.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -373,10 +373,10 @@ blockquote {
 
 code {
   font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color: #efefef;
-  font-size: 13px;
-  margin: 0 4px;
-  padding: 4px 6px;
+  color: #afefef;
+  font-size: 17px;
+  margin: 0 2px;
+  padding: 4px 0px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
