--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,7 @@
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/blog">Blog</a></li>
+    <li><a href="/problems">Problems</a></li>
     <li><a href="/projects">Projects</a></li>
     <li><a href="/resources">Resources</a></li>
     <li><a href="/credits">Credits</a></li>
